@@ -125,6 +125,10 @@ private:
   DATA_TYPE enumDataTypeForString(std::string str_type);
 
 //--------------------
+// Returns string name for enumerated data type 
+  std::string strDataTypeForEnum(DATA_TYPE enum_type);
+
+//--------------------
 // For type=T returns enumerated data type
   template <typename T>
   DATA_TYPE enumDataType()
@@ -149,18 +153,7 @@ private:
   std::string strDataType()
   {
     DATA_TYPE enum_type = enumDataType<T>();
-    if      (enum_type == FLOAT   ) return std::string("float");  
-    else if (enum_type == DOUBLE  ) return std::string("double"); 
-    else if (enum_type == SHORT   ) return std::string("short");  
-    else if (enum_type == UNSIGNED) return std::string("unsigned");
-    else if (enum_type == INT     ) return std::string("int");    
-    else if (enum_type == INT16   ) return std::string("int16_t");
-    else if (enum_type == INT32   ) return std::string("int32_t");
-    else if (enum_type == UINT    ) return std::string("unsigned");   
-    else if (enum_type == UINT8   ) return std::string("uint8_t");
-    else if (enum_type == UINT16  ) return std::string("uint16_t");
-    else if (enum_type == UINT32  ) return std::string("uint32_t");
-    else return std::string("non-implemented");
+    return strDataTypeForEnum(enum_type);
   }
 
 //--------------------
